--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,6 @@
       android:layout_height="wrap_content"
       />
   <Button
-      android:id="@+id/adbWifiDisable"
-      android:text="关闭 wifi 调试"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      />
-  <Button
       android:id="@+id/debugLayoutEnable"
       android:text="DebugLayout enable"
       android:layout_width="wrap_content"
@@ -58,6 +52,12 @@
       android:id="@+id/nonal"
       android:text="屏幕短亮"
       android:layout_below="@+id/setNoClose"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      />
+  <Button
+      android:id="@+id/overDraw"
+      android:text="overdraw"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       />
